--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -151,4 +151,35 @@ h2 {
     background-color: #E71911;
 }
 
+.modal-container {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.9);
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    color: #C0C0CC;
+}
 
+.disc-title {
+    color: crimson;
+    font-size: 18px;
+    background-color: gold;
+    border-radius: 5px;
+}
+
+.modal-title {
+    color: crimson;
+}
+
+.disclaimer {
+    font-size: 20px;
+    color: white;
+}
+
+.accept-button {
+    width: 85px;
+}
