added paralax header and updated styling

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,22 +1,31 @@
+@font-face {
+    font-family: "Mario";
+    src: url('./fonts/SuperMario256.ttf');
+    }
+  
+
 body {
     background-color: #C0C0CC;
+    background-repeat: repeat-y;
     overflow-x: hidden;
+    height: fit-content;
+    
 }
 
 .header {
     width: 100vw;
     background-color: #E71911;
-    height: 50px;
+    height: auto;
     border-bottom: solid 4px #E9E7E2;
     box-shadow: 0 8px 6px -6px #e7e7e7;
-
 }
 
 .title {
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-family: 'mario';
+    font-size: 35px;
     cursor: pointer;
+    height: auto;
 }
 
 main {
@@ -29,6 +38,7 @@ main {
     border-radius: 10px;
     transition: 0.2s;
     cursor: pointer;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.19);
 }
 
 .card:hover {
@@ -203,10 +213,59 @@ h2 {
     width: 85px;
 }
 
-/* .container-fluid {
-    /* padding-right: 15px;
-    padding-left: 15px; */
-    margin-right: auto;
-    margin-left: auto
-} */
+.paralax {
+    background-image: url(./images/mariokart-1.jpg);
+    min-height: 550px;
+    max-height: 600px;
+    background-attachment: fixed;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-bottom: solid 5px #E41801;
+    box-shadow: 0 16px 12px -12px black;
+}
+
+.paralax-title {
+    color: white;
+    width: 40vw;
+    padding: 2rem;
+    align-self: center;
+    background-color: rgba(0, 0, 0, 0.483);
+    border-top-right-radius: 80px;
+    border-bottom-right-radius: 80px;
+    box-shadow:
+        0 0 60px 30px #fff,
+        0 0 100px 60px #f0f,
+        0 0 140px 90px #0ff;
+    font-size: 45px;
+    font-family: mario;
+    text-shadow: 4px 4px #b90000
+}
+
+@media (max-width: 768px) {
+    .paralax-title {
+        font-size: 25px;
+        width: 60vw;
+        box-shadow:
+        0 0 60px 15px #fff,
+        0 0 100px 30px #f0f,
+        0 0 140px 45px #0ff;
+    }
+
+    .header {
+        display: flex;
+        justify-content: left;
+        align-items: flex-end;
+    }
+
+    .title {
+        color: white;
+        font-family: 'mario';
+        font-size: 15px;
+        cursor: pointer;
+        height: auto;
+        text-align: left;
+    }
+}
+
 
