--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -252,6 +252,10 @@ h2 {
         0 0 140px 45px #0ff;
     }
 
+    .paralax {
+        min-height: 80vh;
+    }
+
     .header {
         display: flex;
         justify-content: left;
