--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: "Mario";
+    font-family: "mario";
     src: url('./fonts/SuperMario256.ttf');
     }
   
 
 body {
-    background-color: #C0C0CC;
-    background-repeat: repeat-y;
+    background-image: url('./images/mariowall.png');
+    background-repeat: repeat;
     overflow-x: hidden;
     height: fit-content;
     
@@ -36,6 +36,7 @@ main {
 
 .card {
     border-radius: 10px;
+    border: solid 4px #AFAFAF;
     transition: 0.2s;
     cursor: pointer;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.19);
@@ -43,6 +44,7 @@ main {
 
 .card:hover {
     transform: scale(1.02);
+    border: solid 4px #E41801;
 }
 
 button {
@@ -63,6 +65,7 @@ h2 {
 
 .details-container {
     width: auto;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -74,6 +77,7 @@ h2 {
     height: auto;
     margin-top: 2rem;
     background-color: whitesmoke;
+    border: solid 4px #AFAFAF;
     border-radius: 10px;
 }
 
@@ -96,6 +100,7 @@ h2 {
     height: auto;
     margin-top: 0.1rem;
     background-color: whitesmoke;
+    border: solid 4px #AFAFAF;
     border-radius: 10px;
     font-size: 24px;
 }
@@ -105,6 +110,7 @@ h2 {
     padding: 2rem;
     height: fit-content;
     background-color: whitesmoke;
+    border: solid 4px #AFAFAF;
     border-radius: 10px;
 }
 
@@ -159,6 +165,7 @@ h2 {
 }
 
 .cart-title {
+    border: solid 4px #AFAFAF;
 }
 
 .cart-total {
@@ -191,6 +198,57 @@ h2 {
     height: 100vh;
     width: 100%;
     color: #C0C0CC;
+}
+
+.modal-container-atc {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    color: black;
+}
+
+.modal-title-atc {
+    color: crimson;
+}
+
+.atc-outer {
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) , url('./images/mariowall.png') center center;
+    border: solid 4px #AFAFAF;
+    width: 50vw;
+    padding: 2rem;
+    border-radius: 15px;
+    box-shadow:
+        0 0 60px 30px #fff,
+        0 0 100px 60px #f0f,
+        0 0 140px 90px #0ff;
+}
+
+.atc-inner {
+    background-color: white;
+    width: 45vw;
+    padding: 2rem;
+    border-radius: 15px;
+}
+
+.disclaimer-atc {
+    font-size: 18px;
+    color: black;
+    font-weight: 600;
+}
+
+.atc-btns {
+    display: flex
+}
+
+.store-btn {
+    max-width: 30vw;
+    min-width: 85px;
 }
 
 .disc-title {
@@ -269,6 +327,35 @@ h2 {
         cursor: pointer;
         height: auto;
         text-align: left;
+    }
+
+    .atc-outer {
+        background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) , url('./images/mariowall.png') center center;
+        border: solid 4px #AFAFAF;
+        width: 90vw;
+        padding: 2rem;
+        border-radius: 15px;
+        box-shadow:
+        0 0 30px 15px #fff,
+        0 0 50px 30px #f0f,
+        0 0 70px 45px #0ff;
+    }
+
+    .atc-inner {
+        background-color: #E9E7E2;
+        width: 80vw;
+        padding: 2rem;
+        border-radius: 15px;
+    }
+
+    .back-button {
+        font-size: 14px;
+        color: black;
+        margin-left: 0.5rem !important;
+    }
+
+    .cart-header {
+        font-size: 14px;
     }
 }
 
